# dbt_netsuite_source

./: .gitignore  CHANGELOG.md  README.md  dbt_project.yml  pyproject.toml
.circleci/: config.yml
docs/: catalog.json  manifest.json  run_results.json
integration_tests/: dbt_project.yml  requirements.txt
models/: _netsuite__docs.md  _netsuite__sources.yml  _stg_netsuite__models.yml  stg_netsuite__account_types.sql  stg_netsuite__accounting_book_subsidiaries.sql  stg_netsuite__accounting_books.sql  stg_netsuite__accounting_period_fiscal_cal.sql  stg_netsuite__accounting_period_fiscal_calendars.sql  stg_netsuite__accounting_periods.sql  stg_netsuite__accounts.sql  stg_netsuite__billing_revenue_events.sql  stg_netsuite__billing_schedule_milestones.sql  stg_netsuite__billing_schedule_recurrences.sql  stg_netsuite__billing_schedule_type.sql  stg_netsuite__billing_schedules.sql  stg_netsuite__bins.sql  stg_netsuite__budget_categories.sql  stg_netsuite__budgets.sql  stg_netsuite__budgets_machine.sql  stg_netsuite__classes.sql  stg_netsuite__consolidated_exchange_rates.sql  stg_netsuite__currencies.sql  stg_netsuite__customer_address_book_entity_address.sql  stg_netsuite__customer_address_books.sql  stg_netsuite__customer_categories.sql  stg_netsuite__customers.sql  stg_netsuite__deleted_records.sql  stg_netsuite__departments.sql  stg_netsuite__employee_status_categories.sql  stg_netsuite__employee_statuses.sql  stg_netsuite__employee_type_categories.sql  stg_netsuite__employee_types.sql  stg_netsuite__employees.sql  stg_netsuite__entities.sql  stg_netsuite__item_types.sql  (+32 more)
(+67 files in other folders)
